--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ url: "https://fpang0502.github.io" #"https://chrisnguyenhi.github.io"
 github_username: fpang0502 #chrisnguyenhi
 git_repo: fpang0502 #chrisnguyenhi
 github: https://github.com/fpang0502 #https://github.com/chrisnguyenhi
-linkedin: https://github.com/fpang-hi #https://linkedin.com/in/chrisnguyenhi
+linkedin: https://www.linkedin.com/in/fpang-hi/ #https://linkedin.com/in/chrisnguyenhi
 projects: /projects
 mail: mailto:fpang@usc.edu #mailto:cnguyen7@hawaii.edu
 
